# streamingvlm-executorch

./: .cursorrules  .gitignore  README.md
.cursor/rules/: streamingvlm-mobile.mdc
docs/superpowers/plans/: 2026-05-13-internvl3-partial-prefill.md  2026-05-13-streaming-video-modes.md  2026-05-13-vision-prefill-kv-cache.md  2026-05-15-unified-streaming-baseline.md
docs/superpowers/specs/: 2026-05-13-internvl3-partial-prefill-design.md  2026-05-13-streaming-video-modes-design.md  2026-05-13-vision-prefill-kv-cache-design.md  2026-05-15-unified-streaming-baseline-design.md
for_meetting/: plot_internvl3_opencl_vs_qnn_meeting.py  plot_meeting_phase_stacked_bars.py
for_meetting/2026-05-06/: plot_internvl3_opencl_vs_qnn_meeting.py
hybrid_docs/: README.md  aot_static_graph_vs_runtime_token_loop.md  llamacpp_android_cpu_vlm_smoke.md  llamacpp_android_internvl3_1b_smoke.md
llama.cpp/common/: arg.cpp  common.cpp  common.h
llama.cpp/ggml/include/: ggml-opencl.h  ggml.h
llama.cpp/ggml/src/: ggml.c
llama.cpp/ggml/src/ggml-opencl/: ggml-opencl.cpp
llama.cpp/include/: llama.h
llama.cpp/src/: llama-batch.cpp  llama-context.cpp  llama-cparams.h  llama-graph.cpp  llama-graph.h  llama-kv-cache-iswa.cpp  llama-kv-cache.cpp  llama-kv-cache.h  llama-kv-cells.h  llama-memory-hybrid.cpp  llama-memory.h  llama-model.cpp
llama.cpp/tools/mtmd/: clip-impl.h  clip.cpp  clip.h  mtmd-helper.cpp  mtmd-helper.h  mtmd.cpp  mtmd.h
llama.cpp/tools/mtmd/models/: internvl.cpp  models.h
my_research/: __init__.py
my_research/foundation/: CMakeLists.txt  README.md  __init__.py  cli.py  export.py  export_internvl3_all_lengths.sh  manifest.py
my_research/foundation/debug/: plot_backend_memory_by_seq.py
my_research/foundation/debug/0430/: plot_backend_decode_throughput_by_seq.py  plot_backend_memory_by_seq.py  plot_backend_runtime_by_seq.py  plot_memory_components_timeline.py
my_research/foundation/debug/vision_compare/: README.md  analyze_vision_export_differences.py  compare_dumped_vision_outputs.py  compare_pytorch_vision_overlay.py  export_vulkan_vision_fp32.py  export_vulkan_vision_prefix_fix.py  export_vulkan_vision_stage_fix.py
my_research/foundation/debug/vulkan_fp16_correctness/: README.md  export_fp16_sdpa_kv_island.sh  export_fp16_sdpa_portable.sh
my_research/foundation/docs/: connect_android.md  dynamic_shape_kv_cache.md  for_cursor_llm.md  mobile_backend_flow.md  vulkan_memory_analysis.md
my_research/foundation/docs/archive/: awesome_streaming_video_understanding_survey.md
my_research/foundation/exporters/: __init__.py  qnn.py  xnnpack.py
my_research/foundation/host/: __init__.py  android_timeline_memory_summary.py  launcher.py  memory_plot.py
my_research/foundation/models/internvl3/: 2b_config.json  8b_config.json  BUCK  CMakeLists.txt  __init__.py  export_xnnpack_multimodal.py  internvl3_xnnpack_runner.cpp  run_xnnpack_vlm.py
my_research/foundation/models/internvl3/vision_encoder/: BUCK  __init__.py  export_pre_projector_qnn.py  export_xnnpack.py  model.py  pre_projector.py
my_research/foundation/models/qwen2_5_vl/: __init__.py
my_research/foundation/models/qwen2_5_vl/vision_encoder/: __init__.py  export_qnn.py  model.py
my_research/foundation/runner/: backend.h  foundation_qnn_multimodal_runner.cpp  foundation_qnn_multimodal_runner.h  internal_memory_sampler.h  qnn_backend.cpp  xnnpack_backend.cpp  xnnpack_qnn_runner.cpp
my_research/foundation/scripts/: build_backend_and_runner.sh  export_internvl3_matrix.sh  plot_qnn_memory_vs_seq.py  plot_qnn_phase_time_vs_seq.py  run_internvl3_backend_matrix.sh
my_research/foundation/tests/: test_qwen2_5_vl_vision_encoder.py
my_research/foundation_llamacpp/: README.md  run_android_hybrid_bridge.py  run_android_llamacpp.py
my_research/foundation_llamacpp/docs/: README.md  executorch_vision_llamacpp_decoder.md  for_cursor_llm_llamacpp.md  for_cursor_llm_llamacpp_version2.md  llamacpp_android_opencl_vlm_attempt.md  project_structure.md
my_research/foundation_llamacpp/docs/archive/: dynamic_kv_cache_implementation.md  dynamic_kv_opencl_buffer_memory_architecture.md  executorch_vision_llamacpp_decoder.md  for_cursor_llm_llamacpp.md  kv_rope_reposition_for_video_compression.md  llamacpp_android_memory_summary.md  llamacpp_android_vulkan_vlm_smoke.md  paged_kv_opencl_prototype.md  partial_vision_prefill_kv.md  q4_8_kvcache_implementation.md  streaming_single_buffer_implementation.md  (+5 more)
my_research/foundation_llamacpp/hybrid_bridge/: CMakeLists.txt  file_sync.hpp  foundation_token_io_format.hpp  hybrid_decode.cpp  hybrid_embedding_file.cpp  hybrid_embedding_file.h  hybrid_streaming_decode.cpp  hybrid_vision_dump.cpp  inference_trace.hpp  kv_reposition.hpp  kv_reposition_probe.cpp  opencl_phase_mtmd.cpp  phase_trace.hpp  streaming_policy.hpp  streaming_prompt_format.hpp  vision_encoder_et.cpp  vision_encoder_et.hpp
my_research/foundation_llamacpp/kv_code/: README.txt  pr21313.patch
my_research/foundation_llamacpp/runner/: __init__.py  artifacts.py  cli.py  config.py  finalize.py  llama_args.py  media.py  prompt_formats.py  remote.py
my_research/foundation_llamacpp/scripts/: plot_opencl_ctx_memory_series.py  plot_opencl_kv_grouped_memory.py  run_artifact_layout_1b_q8.sh  run_dynamic_kv_grow_sweep_2b_q8_30s.sh  run_merge_regression_internvl_qwen.sh  run_opencl_ctx_sweep.sh  run_refactor_regression_internvl_1b2b.sh
my_research/foundation_llamacpp/tests/: test_dynamic_kv_device_copy_contract.py  test_hybrid_offline_video_finalize.py  test_kv_rope_reposition_contract.py  test_paged_kv_cache_contract.py  test_phase_plot_contract.py  test_qwen_premerger_hybrid_contract.py  test_remote_adb.py  test_result_artifact_layout.py  test_streaming_media.py  test_streaming_research_refactor_contract.py  test_vision_prefill_kv_cache_contract.py
my_research/test_python/: README_internvl3_partial_prefill.md  internvl3_1b_video_chat.py  internvl3_1b_video_streaming.py  internvl3_partial_prefill.py  requirements-internvl-video.txt
my_research/test_python/tests/: test_internvl3_partial_prefill_helpers.py
tools/server/: README.md
(+81 files in other folders)
